--- a/css/subpage.css
+++ b/css/subpage.css
@@ -114,7 +114,8 @@
     position:relative; top:-250px;
     width:240px; height:215px;
     background:rgba(0, 0, 0, 0.5); color:#fff;
-    font-weight:100; font-size:0.9rem;
+    font-weight:500; font-size:0.9rem;
+    padding-top:40%; box-sizing:border-box;
     opacity:0; transition:all 0.6s;
 }
 .container .inner .content .product .product-list:hover:after {
@@ -132,22 +133,25 @@
 /* 모달창 안 */
 .container .inner .content .product-modal {
     background: rgba(0,0,0,0.5);
-    position:absolute; top:0; left:-50px;
+    position:absolute; top:0; left:0;
     width:100%; height:100%;
     cursor:pointer;
     display:none;
 }
 .container .inner .content .product-modal .product-modal-cont{
     background:white;
-    position:absolute; top:200px; left:100px;
-    width: 500px; height:600px;
+    position:absolute; top:200px; left:25%;
+    width:50%; height:600px;
+    border-radius:20px;
     display:none;
 }
 .container .inner .content .product-modal .product-modal-cont img {
     width:330px; height:300px;
+    display:block; margin:0 auto;
 }
-.container .inner .content .product-modal .product-modal-cont p {
-   
+.container .inner .content .product-modal .modal-cont p {
+   padding-left:20px;
+   padding-right:20px;
 }
 
 /*                         초코파이 하우스                      */
@@ -267,7 +271,7 @@
     padding:0;
     position:absolute; top:530px; left:320px;
     outline:0px solid black;
-    width:200px; height: 100px; overflow:hidden; transition:height 0.8s;
+    width:200px; height: 100px;
 }
 
 /* 3번 */
@@ -283,7 +287,7 @@
     padding:0;
     position:absolute; top:430px; left:125px;
     outline:0px solid black;
-    width:200px; height: 100px; overflow:hidden; transition:height 0.8s;
+    width:200px; height: 100px;
 }
 
 /* 4번 */
@@ -299,7 +303,7 @@
     padding:0;
     position:absolute; top:200px; left:80px;
     outline:0px solid black;
-    width:220px; height: 100px; overflow:hidden; transition:height 0.8s;
+    width:220px; height: 100px;
 }
 
 /* 초코파이 하우스 - 소개 - special flavor */
@@ -332,7 +336,7 @@
     opacity:0; transition:all 0.8s;
 }
 .container .inner .content .cont-chocopie .chocopie-flavor  ul .flavor-img .img-txt {
-    width:300px; height:30px;
+    width:300px; height:30px; 
 }
 .container .inner .content .cont-chocopie .chocopie-flavor  ul .flavor-img .img-txt2 { /*가운데글자*/
     width:300px; height:200px;
@@ -464,10 +468,14 @@
     cursor:pointer;   
 }
 .gran-modal .gran-modal-cont {  
-    position:relative; margin:140px auto;
-    width:60%;
+    background:white;
+    position:absolute; top:100px; left:25%;
+    width:50%; height:400px;
     border-radius:20px;
-    background:#fff;
+    display:none;
+}
+.gran-modal .gran-modal-cont img {
+    display:block; margin:0 auto;
 }
 
 /* 마켓오,닥터유,제주용암수
@@ -548,6 +556,9 @@
 
 /*                           회사소개                              */
 /* 회사소개 - 회사연혁 */
+.container .inner .content .history_m {
+    display:none;
+}
 .container .inner .content .history {
     width:100%; height:1000px;
 }
