--- a/css/index.css
+++ b/css/index.css
@@ -155,21 +155,16 @@ body { background: #ffd000; }
     position:absolute; left:0; top:0;
     width:100%; height:100%;
 }
-.container .inner #content-main .blank-m { 
+/* .container .inner #content-main .blank-m { 
     width:100%; height:520px;
     display:none;
     position:absolute;
-}
-.container .inner .content-list .content_m { 
-    width:100%; height:520px; /*inner== width:760px*/
-    position:absolute; top:0; left:0;
-    display:none;
-    z-index:1;
-    background-size: contain;
-} 
+} */
+
 .container .inner_m {
+    position:relative; 
     display:none;
-    margin-top:30px;
+    margin-top:80px;
     font-family: 'Hammersmith One', sans-serif;
 }
 .container .inner_m h1 {
@@ -397,7 +392,10 @@ body { background: #ffd000; }
     header, footer { min-width:auto; }
     .container { min-height: none; }
     .container .bottom-menubar { display:none; }
-    .container .inner { width:90%; height:70vw; box-shadow:0 0 10px rgba(0, 0, 0, 0.4); }
+    .container .inner { 
+        position:relative; margin-top:80px;
+        width:90%; height:70vw; box-shadow:0 0 10px rgba(0, 0, 0, 0.4); 
+    }
     .container .inner #content-main { width:90%; height:100%; }
     /* .container .inner #content-main .blank { display:none; } */
     .container .inner #content-main .content-main-c { width:90vw; }
@@ -415,7 +413,7 @@ body { background: #ffd000; }
     .container .inner .next img,
     .container .inner .prev img,
     .container .inner .content-list_m,
-    .container .inner .content-list_m img:first-child
+    .container .inner .content-list_m img:nth-child(1)
      {
         display:block;
     }
