--- a/css/subpage.css
+++ b/css/subpage.css
@@ -432,6 +432,7 @@
     grid-auto-rows: 320px;
 } 
 .container .inner .content .shelf .shelf-box .modal-btn {
+    width:100%;
     transition:all 0.6s;
     margin: 0 auto;
     position:relative; z-index:2;
@@ -468,8 +469,9 @@
     cursor:pointer;   
 }
 .gran-modal .gran-modal-cont {  
-    background:white;
-    position:absolute; top:100px; left:25%;
+    background:white; padding:10px;
+    position:absolute; top:80px; left:25%;
+    z-index:500;
     width:50%; height:400px;
     border-radius:20px;
     display:none;
@@ -547,7 +549,7 @@
 .container .inner .content .cont-customer button {
     width:100px; height:40px;
     margin:30px 300px;
-    border:none;
+    border:1px solid gray;
     cursor:pointer;
 }
 .container .inner .content .cont-customer button:hover {
@@ -678,7 +680,7 @@
 .container .inner .content .recruit div button {
     width:100px; height:40px;
     margin:30px auto;
-    border:none;
+    border:1px solid gray;
     cursor:pointer;
 }
 .container .inner .content .recruit button:hover {
