--- a/css/subpage.css
+++ b/css/subpage.css
@@ -95,10 +95,8 @@
     width:100%;
     position:relative;
     margin:80px auto;
-    display:grid;
-    grid:repeat(2, 1fr) /auto-flow;
-    row-gap:150px;
-    justify-content: space-around;
+    display:grid; grid-template-columns:repeat(4, 1fr);
+    row-gap:100px;
 }
 .container .inner .content .product .product-list {
     width:240px; height:215px;
@@ -146,7 +144,7 @@
     display:none;
 }
 .container .inner .content .product-modal .product-modal-cont img {
-    width:330px; height:300px;
+    width:100%; height:300px;
     display:block; margin:0 auto;
 }
 .container .inner .content .product-modal .modal-cont p {
@@ -465,7 +463,7 @@
     display:none; 
     position:absolute; left:0;top:0; z-index:2;
     width:100%; height:100%;
-    background:rgba(0,0,0,0.7);
+    background:rgba(109, 108, 108, 0.7);
     cursor:pointer;   
 }
 .gran-modal .gran-modal-cont {  
