--- a/css/subpage_m.css
+++ b/css/subpage_m.css
@@ -85,6 +85,10 @@
     height:195px; width:90%;
     margin:0;
 }
+/* .container .inner .content .product .product-list {
+    width:100%; height:215px;
+    margin-left:2%; margin-right:2%;
+} */
 .container .inner .content .product-modal .product-modal-cont{
     position:absolute; top:200px; left:15%;
     width:70%;
@@ -161,12 +165,14 @@
 .container .inner .content .shelf .shelf-box-txt {
     grid-template-columns: repeat(2, 1fr); 
 }
+.container .inner .content .product .product-list:after {
+display:none;
+}
 
 /* 그래놀라, 그래놀라 바 이미지 팝업 */
 .gran-modal .gran-modal-cont {  
     position:absolute; top:200px; left:5%;
     width:90%; height: 520px;
-    padding:10px;
     border-radius:20px;
 }
 .gran-modal .gran-modal-cont p {
