--- a/css/subpage.css
+++ b/css/subpage.css
@@ -137,14 +137,15 @@
     display:none;
 }
 .container .inner .content .product-modal .product-modal-cont{
-    background:white;
-    position:absolute; top:200px; left:25%;
-    width:50%; height:600px;
+    background:white; padding:10px;
+    position:absolute; top:80px; left:25%;
+    z-index:500;
+    width:50%; height:700px;
     border-radius:20px;
     display:none;
 }
 .container .inner .content .product-modal .product-modal-cont img {
-    width:100%; height:300px;
+    width:auto;
     display:block; margin:0 auto;
 }
 .container .inner .content .product-modal .modal-cont p {
@@ -430,7 +431,7 @@
     grid-auto-rows: 320px;
 } 
 .container .inner .content .shelf .shelf-box .modal-btn {
-    width:100%;
+    width:240px;
     transition:all 0.6s;
     margin: 0 auto;
     position:relative; z-index:2;
@@ -441,13 +442,13 @@
 }
 .container .inner .content .shelf .shelf-box-txt {
     width:100%; height:600px;
-    padding-top:210px;
     position:absolute; z-index:1;
     text-align:center;
     display:grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-auto-rows: 49px;
     row-gap:275px;
+    padding-top:240px;
     cursor:pointer; 
 }
 .container .inner .content .shelf .shelf-box-txt li{
