--- a/css/subpage_t.css
+++ b/css/subpage_t.css
@@ -77,7 +77,7 @@
 
 .gran-modal .gran-modal-cont {  
     position:absolute; top:200px; left:15%;
-    width:60%;
+    width:60%; z-index:99;
     border-radius:20px;
 }
 /* 회사소개 */
