--- a/css/subpage.css
+++ b/css/subpage.css
@@ -449,9 +449,9 @@
     position:relative; z-index:3;
     cursor:pointer;
 }
-.container .inner .content .shelf .shelf-box .modal-btn:hover { /*호버*/
+/* .container .inner .content .shelf .shelf-box .modal-btn:hover { /*호버*/
     transform:scale(1.2) translatez(30px);
-}
+} */
 .container .inner .content .shelf .shelf-box-txt {
     width:100%; height:600px;
     position:absolute; z-index:1;
@@ -459,7 +459,7 @@
     display:grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-auto-rows: 390px;
-    padding-top:200px;
+    padding-top:220px;
     cursor:pointer; 
 }
 .container .inner .content .shelf .shelf-box-txt li{
