--- a/css/subpage_m.css
+++ b/css/subpage_m.css
@@ -163,7 +163,7 @@
     grid-template-columns:repeat(2, 1fr);
 }
 .container .inner .content .shelf .shelf-box .modal-btn {
-    width:100%;
+    width:240px;
 }
 .container .inner .content .shelf .shelf-box-txt {
     grid-template-columns: repeat(2, 1fr); 
