--- a/css/index.css
+++ b/css/index.css
@@ -204,10 +204,10 @@ body { background: #ffd000; }
 }
 .container .inner_m .banner_m .swiper-container2 {
     overflow:hidden;
-    height:250px;
 }
 .container .inner_m .banner_m .swiper-container2 .swiper-wrapper .swiper-slide{
     background:rgba(255, 255, 255, 0.7); border-radius:5px; 
+    padding-bottom:15px;
 }
 .container .inner_m .banner_m .swiper-container2 .swiper-wrapper .swiper-slide a img {
     width:100%; max-width:249px;
@@ -231,13 +231,13 @@ body { background: #ffd000; }
     background-image: url(../images/page_arrow_left.png);
     background-size:300%;
     width:25px;height:25px;
-    position: relative; top:-50%;
+    position: relative; top:-120px;
 }
 .swiper-button-next {
     background-image: url(../images/page_arrow_right.png);
     background-size:300%;
     width:25px;height:25px;
-    position: relative; top:-50%; left:94%;
+    position: relative; top:-120px; left:93%;
 }
 .container .inner_m .banner-sns .sns_m {
     width:70%; margin:0px auto;
