--- a/css/subpage.css
+++ b/css/subpage.css
@@ -99,7 +99,7 @@
     row-gap:100px;
 }
 .container .inner .content .product .product-list {
-    width:240px; height:215px;
+    width:240px; height:210px;
     margin-left:2%; margin-right:2%;
     cursor:pointer;
 }
@@ -444,34 +444,27 @@
 } 
 .container .inner .content .shelf .shelf-box .modal-btn {
     width:240px;
-    transition:all 0.6s;
     margin: 0 auto;
     position:relative; z-index:3;
     cursor:pointer;
 }
+.container .inner .content .shelf .shelf-box .modal-btn img {
+    width:100%;
+    transition:all 0.6s;
+    margin: 0 auto;
+}
 /* .container .inner .content .shelf .shelf-box .modal-btn:hover { /*호버
     transform:scale(1.2) translatez(30px);
 } */
-.container .inner .content .shelf .shelf-box-txt {
-    width:100%; height:600px;
-    position:absolute; z-index:1;
+.container .inner .content .shelf .shelf-box .modal-btn>p {         
     text-align:center;
-    display:grid;
-    grid-template-columns: repeat(4, 1fr); 
-    grid-auto-rows: 390px;
-    padding-top:220px;
-    cursor:pointer; 
+    width:100%; height:30px;
+    padding-top:0; padding-bottom:10px;
 }
-.container .inner .content .shelf .shelf-box-txt li{
-    text-align:center;
-    width:100%;
-    position:relative;
-}
-.container .inner .content .shelf .shelf-box-txt li p {   
+.container .inner .content .shelf .shelf-box .modal-btn>p:nth-child(3) {   
     font-size:0.9rem; color:#aaa;
-    padding:10px;
 }
-.container .inner .content .shelf .shelf-box-txt li p span {
+.container .inner .content .shelf .shelf-box .modal-btn>p>span {
     color:black; font-weight:normal; text-align:center;
     padding:3px;
     background:#63371a; color:white;
