--- a/css/subpage_m.css
+++ b/css/subpage_m.css
@@ -79,21 +79,43 @@
 }
 /* 신제품 */
 .container .inner .content .product { 
-    grid:'. .'; justify-content:center;
+    grid-template-columns:repeat(2, 1fr); justify-content:center;
 }
 .container .inner .content .product .product-list{
-    height:195px; width:90%;
+    height:auto; width:90%;
     margin:0;
 }
-/* .container .inner .content .product .product-list {
-    width:100%; height:215px;
-    margin-left:2%; margin-right:2%;
-} */
+.container .inner .content .product .product-list:after {
+    display:none;
+}
 .container .inner .content .product-modal .product-modal-cont{
     position:absolute; top:200px; left:5%;
     width:90%; height: 520px;
     border-radius:20px;
 }
+
+/* 마켓오 네이쳐 그래놀라 */
+.container .inner .content .shelf .shelf-box {
+    grid-template-columns:repeat(2, 1fr);
+}
+.container .inner .content .shelf .shelf-box .modal-btn{
+    height:195px; width:90%;
+    margin:0;
+}
+.container .inner .content .product-modal .product-modal-cont{
+    width:90%; height:600px;
+}
+
+/* 그래놀라, 그래놀라 바 이미지 팝업 */
+.gran-modal .gran-modal-cont {  
+    position:absolute; top:200px; left:5%;
+    width:90%; height: 520px; z-index:99;
+    border-radius:20px;
+}
+.gran-modal .gran-modal-cont p {
+    text-indent:25px; padding-right:25px;
+}
+
 /* 초코파이 하우스 */
 .container .inner .content .cont-chocopie .chocopie-flavor ul .flavor-img:nth-child(odd) { margin-right:0px; }
 
@@ -158,32 +180,6 @@
 }
 
 
-/* 마켓오 네이쳐 그래놀라 */
-.container .inner .content .shelf .shelf-box {
-    grid-template-columns:repeat(2, 1fr);
-}
-.container .inner .content .shelf .shelf-box .modal-btn {
-    width:240px;
-}
-.container .inner .content .shelf .shelf-box-txt {
-    grid-template-columns: repeat(2, 1fr); 
-}
-.container .inner .content .product .product-list:after {
-    display:none;
-}
-.container .inner .content .product-modal .product-modal-cont{
-    width:90%; height:600px;
-}
-
-/* 그래놀라, 그래놀라 바 이미지 팝업 */
-.gran-modal .gran-modal-cont {  
-    position:absolute; top:200px; left:5%;
-    width:90%; height: 520px; z-index:99;
-    border-radius:20px;
-}
-.gran-modal .gran-modal-cont p {
-    text-indent:25px; padding-right:25px;
-}
 
 
 /*                    고객의견                   */
